# scaleway_billing_collector

./: .dockerignore  .gitignore  BILLING_COLLECTOR_PLAN.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish-artifacts.yml
billing_collector/: __init__.py  app.py  cli.py  config.py
billing_collector/application/: __init__.py  periods.py
billing_collector/application/ports/: __init__.py  billing.py  repositories.py
billing_collector/application/services/: billing_collection_service.py  collection_models.py  consumption_collection_service.py  history_seed_service.py  tax_collection_service.py
billing_collector/collection/: __init__.py  differ.py  periods.py  scheduler.py  service.py
billing_collector/domain/: __init__.py  classification.py  differ.py  fingerprints.py  models.py  money.py
billing_collector/infrastructure/metrics/: __init__.py  prometheus_metrics_renderer.py
billing_collector/infrastructure/scaleway/: __init__.py  (+1 more)
billing_collector/metrics/: __init__.py  collector.py  server.py
billing_collector/scaleway/: __init__.py  client.py  rest_client.py
billing_collector/storage/: __init__.py  database.py  repositories.py
deploy/kubernetes/: README.md  scaleway-billing-collector.yaml
docs/: grafana-promql.md  runbook.md
scripts/: seed-history.sh
tests/: test_classification.py  test_collection_service.py  test_config.py  test_differ.py  test_fingerprints.py  test_history_seed.py  test_metrics.py  test_money.py  test_periods.py  test_scaleway_rest_client.py  test_scheduler.py  test_storage.py  test_tax_differ.py
(+24 files in other folders)
