[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "scaleway-billing-collector"
version = "0.1.0"
description = "Scaleway billing usage collector for Prometheus, Thanos, and Grafana."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.11",
  "httpx>=0.28",
  "prometheus-client>=0.22",
  "pydantic>=2.10",
  "pydantic-settings>=2.8",
  "sqlalchemy>=2.0",
  "tenacity>=9.0",
]

[project.optional-dependencies]
scaleway-sdk = ["scaleway>=2.0"]
test = ["pytest>=8.0"]

[project.scripts]
billing-collector = "billing_collector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

