[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "scaleway-billing-collector"
version = "0.1.0"
description = "Scaleway billing usage collector for Prometheus, Thanos, and Grafana."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
billing-collector = "billing_collector.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["billing_collector"]

[tool.pytest.ini_options]
testpaths = ["tests"]
